Fix <https://bugs.webkit.org/show_bug.cgi?id=15106>. Bug 15106: REGRESSION: Can't drag text as element when user-select is set to none

Reviewed by Dan Bernstein.

We allow selections to begin within an element that has -webkit-user-select: none set,
unless the element is draggable as dragging should take priority over starting a selection.

Test: editing/selection/user-drag-element-and-user-select-none.html

* dom/Node.cpp:
(WebCore::Node::canStartSelection):

Test for <https://bugs.webkit.org/show_bug.cgi?id=15106>.
Bug 15106: REGRESSION: Can't drag text as element when user-select is set to none

* editing/selection/user-drag-element-and-user-select-none-expected.txt: Added.
* editing/selection/user-drag-element-and-user-select-none.html: Added.

Canonical link: https://commits.webkit.org/36714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44902 268f45cc-cd09-0410-ab3c-d52691b4dbfc